[package]
name = "daytona"
version = "0.1.0"
authors = ["Alex Beregszaszi <alex@rtfs.hu>"]
license = "Apache-2.0"
edition = "2018"

[lib]
name = "daytona"
crate-type = ["staticlib", "cdylib"]

[dependencies]
evmc-sys = { git = "https://github.com/ethereum/evmc", rev = "611e050" }
evmc-vm = { git = "https://github.com/ethereum/evmc", rev = "611e050" }
evmc-declare = { git = "https://github.com/ethereum/evmc", rev = "611e050" }
standalone_parity_evm = { git = "https://github.com/axic/standalone-parity-evm", rev = "e89e30a" }

[profile.release]
lto = true
debug = false
opt-level = 3
