[package]
name = "daytona"
version = "0.1.0"
authors = ["Alex Beregszaszi <alex@rtfs.hu>"]
license = "Apache-2.0"
edition = "2018"

[lib]
name = "daytona"
crate-type = ["staticlib", "cdylib"]

[dependencies]
evmc-sys = { git = "https://github.com/ethereum/evmc", rev = "85d22f0" }
evmc-vm = { git = "https://github.com/ethereum/evmc", rev = "85d22f0" }
evmc-declare = { git = "https://github.com/ethereum/evmc", rev = "85d22f0" }
standalone_parity_evm = { git = "https://github.com/axic/standalone-parity-evm", rev = "e89e30a" }

[profile.release]
lto = true
debug = false
opt-level = 3
