[package]
name = "daytona"
version = "0.1.0"
authors = ["Alex Beregszaszi <alex@rtfs.hu>"]
license = "Apache-2.0"
edition = "2018"

[lib]
name = "daytona"
crate-type = ["staticlib", "cdylib"]

[dependencies]
evmc-sys = "7.1"
evmc-vm = "7.1"
evmc-declare = "7.1"
standalone_parity_evm = { git = "https://github.com/axic/standalone-parity-evm", tag = "v2.3.3" }

[profile.release]
lto = true
debug = false
opt-level = 3
